Fix linking libcling and libclangInterpreter

--- a/tools/libcling/CMakeLists.txt
+++ b/tools/libcling/CMakeLists.txt
@@ -44,6 +44,9 @@ set( LLVM_LINK_COMPONENTS
   target
   transformutils
   binaryformat
+  orctargetprocess
+  passes
+  targetparser
   ${LLVM_TARGETS_TO_BUILD}
 )
 
