--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -56,6 +56,9 @@ set(LLVM_LINK_COMPONENTS
   target
   transformutils
   binaryformat
+  orctargetprocess
+  passes
+  targetparser
   ${LLVM_TARGETS_TO_BUILD}
 )
 
